day4/06_Canary/canary-demo/deploy/canary-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "20"
  labels:
    app: demo
  name: demo-ingress
  namespace: demo-canary
spec:
  ingressClassName: nginx
  rules:
  - host: canary-demo.127.0.0.1.nip.io
    http:
      paths:
      - backend:
          service:
            name: demo-canary
            port: 
              number: 80
        path: /
        pathType: ImplementationSpecific
---
